# claude-inspect

./: .gitignore  README.md  pyproject.toml
src/claude_inspect/: client.py  process.py  script_wrapper.py  win.py
src/claude_inspect/js/: _operations.js  _wrapper.js  auto-approve.js  inject.js
